--- a/gRPCCacheService.Protos/gRPCCacheService.Protos.csproj
+++ b/gRPCCacheService.Protos/gRPCCacheService.Protos.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc" Version="1.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Generated\" />
+  </ItemGroup>
+
 </Project>
