--- a/gRPCCacheService.Server/gRPCCacheService.Server.csproj
+++ b/gRPCCacheService.Server/gRPCCacheService.Server.csproj
@@ -1,8 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Grpc" Version="1.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\gRPCCacheService.Protos\gRPCCacheService.Protos.csproj" />
+  </ItemGroup>
 </Project>
