--- a/gRPCCacheService.Client/gRPCCacheService.Client.csproj
+++ b/gRPCCacheService.Client/gRPCCacheService.Client.csproj
@@ -3,6 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+	<LangVersion>7.1</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc" Version="1.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\gRPCCacheService.Protos\gRPCCacheService.Protos.csproj" />
+  </ItemGroup>
 
 </Project>
