--- a/gRPCCacheService.Protos/gRPCCacheService.Protos.csproj
+++ b/gRPCCacheService.Protos/gRPCCacheService.Protos.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.6.1" />
     <PackageReference Include="Grpc" Version="1.15.0" />
   </ItemGroup>
 
