--- a/gRPCCacheService.Server/gRPCCacheService.Server.csproj
+++ b/gRPCCacheService.Server/gRPCCacheService.Server.csproj
@@ -11,6 +11,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\gRPCCacheService.Protos\gRPCCacheService.Common.csproj" />
+    <ProjectReference Include="..\gRPCCacheService.Common\gRPCCacheService.Common.csproj" />
   </ItemGroup>
 </Project>
