--- a/gRPCCacheService.Common/gRPCCacheService.Common.csproj
+++ b/gRPCCacheService.Common/gRPCCacheService.Common.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf" Version="3.6.1" />
     <PackageReference Include="Grpc" Version="1.15.0" />
+    <PackageReference Include="IdentityModel" Version="3.10.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
   </ItemGroup>
 
   <ItemGroup>
