--- a/gRPCCacheService.Server/gRPCCacheService.Server.csproj
+++ b/gRPCCacheService.Server/gRPCCacheService.Server.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc" Version="1.15.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.1.3" />
   </ItemGroup>
 
   <ItemGroup>
